v1.11.x/connectors/database/redshift.mdx
---
title: Redshift Connector | OpenMetadata AWS Data Warehouse
description: Connect Amazon Redshift to OpenMetadata Easily with our comprehensive database connector guide. Setup instructions, configuration tips, and metadata ext...
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import ConfigureIngestion from '/snippets/connectors/database/configure-ingestion.mdx'
import AdvancedConfiguration from '/snippets/connectors/database/advanced-configuration.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'
import Related from '/snippets/v1.11.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/redshift.webp'
name="Redshift"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Owners", "Tags"]} />
In this section, we provide guides and references to use the Redshift connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Username and password authentication
- **IAM Auth** — AWS IAM-based authentication with automatic temporary credential retrieval (supports both Provisioned Clusters and Serverless Workgroups)
</Info>

Configure and schedule Redshift metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v1.11.x/connectors/ingestion/workflows/metadata/incremental-extraction/redshift)
- [Query Usage](/v1.11.x/connectors/ingestion/workflows/usage)
- [Data Profiler](/v1.11.x/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v1.11.x/how-to-guides/data-quality-observability/quality)
- [Lineage](/v1.11.x/connectors/ingestion/lineage)
- [dbt Integration](/v1.11.x/connectors/database/dbt)
- [Enable Security](#securing-redshift-connection-with-ssl-in-openmetadata)
- [Troubleshooting](/v1.11.x/connectors/database/redshift/troubleshooting)

## Requirements
### Metadata
Redshift user must grant `SELECT` privilege on table [SVV_TABLE_INFO](https://docs.aws.amazon.com/redshift/latest/dg/r_SVV_TABLE_INFO.html) to fetch the metadata of tables and views. For more information visit [here](https://docs.aws.amazon.com/redshift/latest/dg/c_visibility-of-data.html).
```sql
-- Create a new user
-- More details https://docs.aws.amazon.com/redshift/latest/dg/r_CREATE_USER.html
CREATE USER test_user with PASSWORD 'password';
-- Grant SELECT on table
GRANT SELECT ON TABLE svv_table_info to test_user;
```
<Note>
The Redshift connector supports both Amazon Redshift Provisioned (cluster) and Amazon Redshift Serverless starting from release 1.11.5. The connector automatically detects the deployment type during ingestion and uses the appropriate system views for query and lineage extraction. No additional configuration changes are required.
</Note>
<Tip>
Ensure that the ingestion user has **USAGE** privileges on the schema containing the views. If additional access is needed, run the following command:
```sql
GRANT USAGE ON SCHEMA "<schema_name>" TO <ingestion_user>;
```
</Tip>
  ### Profiler & Data Quality
  Executing the profiler workflow or data quality tests, will require the user to have `SELECT` permission on the tables/schemas where the profiler/tests will be executed. For system-level profiling metrics on Provisioned Clusters, the user also needs:
  ```sql
  GRANT SELECT ON TABLE pg_catalog.stl_insert TO <ingestion_user>;
  GRANT SELECT ON TABLE pg_catalog.stl_delete TO <ingestion_user>;
  ```
  More information on the profiler workflow setup can be found [here](/v1.11.x/how-to-guides/data-quality-observability/profiler/profiler-workflow) and data quality tests [here](/v1.11.x/how-to-guides/data-quality-observability/quality).
  ### Usage & Lineage
  For the usage and lineage workflow, the user will need `SELECT` privilege on the following system tables:

  **For Provisioned Clusters:**
  ```sql
  GRANT SELECT ON TABLE pg_catalog.stl_query TO <ingestion_user>;
  GRANT SELECT ON TABLE pg_catalog.stl_querytext TO <ingestion_user>;
  GRANT SELECT ON TABLE pg_catalog.stl_scan TO <ingestion_user>;
  ```

  **For Serverless Workgroups:**
  ```sql
  GRANT SELECT ON TABLE pg_catalog.sys_query_history TO <ingestion_user>;
  GRANT SELECT ON TABLE pg_catalog.sys_query_text TO <ingestion_user>;
  GRANT SELECT ON TABLE pg_catalog.sys_query_detail TO <ingestion_user>;
  ```

  You can find more information on the usage workflow [here](/v1.11.x/connectors/ingestion/workflows/usage) and the lineage workflow [here](/v1.11.x/connectors/ingestion/workflows/lineage).
  ### Stored Procedures
  For stored procedure lineage extraction, the user needs `SELECT` privilege on:

  **For Provisioned Clusters:**
  ```sql
  GRANT SELECT ON TABLE pg_catalog.svl_stored_proc_call TO <ingestion_user>;
  ```

  **For Serverless Workgroups:**
  ```sql
  GRANT SELECT ON TABLE pg_catalog.sys_procedure_call TO <ingestion_user>;
  ```
### IAM Authentication
To use IAM authentication instead of basic username/password, ensure the IAM role or user has the following permissions:

**For Provisioned Clusters:**
```json
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": "redshift:GetClusterCredentials",
      "Resource": [
        "arn:aws:redshift:<region>:<account-id>:dbuser:<cluster-id>/<db-user>",
        "arn:aws:redshift:<region>:<account-id>:dbname:<cluster-id>/<db-name>"
      ]
    }
  ]
}
```

**For Serverless Workgroups:**
```json
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": "redshift-serverless:GetCredentials",
      "Resource": "arn:aws:redshift-serverless:<region>:<account-id>:workgroup/<workgroup-id>"
    }
  ]
}
```
<Note>
The connector automatically detects whether your Redshift endpoint is Provisioned or Serverless based on the hostname pattern and uses the appropriate API for credential retrieval.
</Note>
## Metadata Ingestion
<MetadataIngestionUi connector={"Redshift"} selectServicePath={"/public/images/connectors/redshift/select-service.png"} addNewServicePath={"/public/images/connectors/redshift/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/redshift/service-connection.png"} />
It is recommended to exclude the schema "information_schema" from the metadata ingestion as it contains system tables and views.
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **Username**: Specify the User to connect to Redshift. It should have enough privileges to read all the metadata.
- **Auth Type**: Choose the authentication method:
  - **Basic Auth**: Use username and password for authentication.
    - **Password**: Password to connect to Redshift.
  - **IAM Auth**: Use AWS IAM for authentication. This retrieves temporary credentials automatically.
    - **AWS Region**: AWS region where your Redshift cluster/workgroup is located (e.g., `us-east-1`).
    - **AWS Access Key ID** (Optional): Access key for the IAM user/role. If not provided, the connector uses the default AWS credentials chain (environment variables, instance profile, etc.).
    - **AWS Secret Access Key** (Optional): Secret key corresponding to the Access Key ID.
    - **AWS Session Token** (Optional): Session token for temporary credentials.
    - **Assume Role ARN** (Optional): ARN of a role to assume for cross-account access.
    - **Assume Role Session Name** (Optional): Session name when assuming a role.
- **Database**: The database of the data source is an optional parameter, if you would like to restrict the metadata reading to a single database. If left blank, OpenMetadata ingestion attempts to scan all the databases.
<Tip>
During the metadata ingestion for redshift, the tables in which the distribution style i.e, `DISTSTYLE` is not `AUTO` will be marked as partitioned tables
</Tip>
**SSL Configuration**
In order to integrate SSL in the Metadata Ingestion Config, the user will have to add the SSL config under connectionArguments which is placed in the source.
**SSL Modes**
There are a couple of types of SSL modes that Redshift supports which can be added to ConnectionArguments, they are as follows:
- **disable**: SSL is disabled and the connection is not encrypted.
- **allow**: SSL is used if the server requires it.
- **prefer**: SSL is used if the server supports it. Amazon Redshift supports SSL, so SSL is used when you set sslmode to prefer.
- **require**: SSL is required.
- **verify-ca**: SSL must be used and the server certificate must be verified.
- **verify-full**: SSL must be used. The server certificate must be verified and the server hostname must match the hostname attribute on the certificate.
For more information, you can visit [Redshift SSL documentation](https://docs.aws.amazon.com/redshift/latest/mgmt/connecting-ssl-support.html)
</Step>
<AdvancedConfiguration />
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>
## Securing Redshift Connection with SSL in OpenMetadata
To establish secure connections between OpenMetadata and a Redshift database, you can configure SSL using different SSL modes provided by Redshift, each offering varying levels of security.
Under `Advanced Config`, specify the SSL mode appropriate for your connection, such as `prefer`, `verify-ca`, `allow`, and others. After selecting the SSL mode, provide the CA certificate used for SSL validation (`caCertificate`). Note that Redshift requires only the CA certificate for SSL validation.
<img src="/public/images/connectors/ssl_connection.png" alt="SSL Configuration" height="450px" />

<Related />
